--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,8 +1,6 @@
 @import "bourbon"
 @import "vars.sass"
 
-//Load Libs SASS
-@import "app/libs/animate/animate.sass"
 
 *::-webkit-input-placeholder
 	color: #666
@@ -32,3 +30,8 @@ body textarea:required:valid
 
 //ALWAYS END
 @import "media"
+
+//Load Libs SASS
+@import "app/libs/animate/animate.sass"
+@import "app/libs/superfish/dist/css/superfish"
+@import "app/libs/font-awesome/scss/font-awesome.scss"
