--- a/sass/header.sass
+++ b/sass/header.sass
@@ -9,9 +9,13 @@ body
 	font-family: "RobotoRegular", sans-serif
 	overflow-x: hidden
 	color: #111
+	background-color: $main-color
 
 .hidden
 	display: none
+
+a
+	outline: none!important
 
 strong, b
 	font-family: "RobotoBold", sans-serif
@@ -22,9 +26,16 @@ h1, h2, h3, h4, h5, h6, .button
 	font-weight: normal
 	text-transform: uppercase
 
+.text-right
+	text-align: right
+
+.text-left
+	text-align: left
+
 .top-line
 	background-color: $main-color
 	text-align: center
+	border-bottom: lighten($main-color, 6%) 1px solid
 	a 
 		color: #fff
 	ul, li 
@@ -32,14 +43,149 @@ h1, h2, h3, h4, h5, h6, .button
 		padding: 0
 		margin: 0
 	.sf-menu
-		margin: auto
+		margin: 0 auto -6px
 		float: none
 		display: inline-block
 		font-family: "RobotoCondensedRegular", sans-serif
 		font-size: em(15px)
-		li
+		background-color: $main-color
+		a
+			border-bottom: lighten($main-color, 5%) 1px solid
+			border-left: transparent
+			border-top: none
+		>li
+			// border-bottom: lighten($main-color, 5%) 1px solid
 			background-color: transparent
-			a
+			>a
 				color: #FFF
-	>	li
+				border: none
+				padding: 25px 28px 25px
+				.fa
+					font-size: 11px
+					margin-left: 2px
+			&:hover
+				background-color: darken($main-color, 3%)
+				>a
+					color: $accent-color
+			
+			ul
+				li
+					background-color: $main-color
+					text-align: left
+					&:hover
+						>a
+							color: $accent-color
+					a  
+						padding: 10px 20px
+						color: #fff
+
+// Top pannel
+.top-pannel
+	background-color: rgba(lighten($main-color, 2%), .8)
+	color: #fff
+	padding: 50px 0
+	position: relative
+	&-content
+		position: relative
+		z-index: 1
+	&::before
+		content: ''
+		position: absolute
+		top: 0
+		left: 0
+		bottom: 0
+		right: 0
+		background-image: url(../img/top-pannel-bg.jpg)
+		z-index: 0
+		opacity: .16
+	&-box
+		h4
+			font-family: "RobotoCondensedRegular", sans-serif
+			font-size: em(15px)
+			margin-top: 0
+			position: relative
+			&::after
+				content: ''
+				height: 1px
+				width: 100%
+				background-color: $accent-color
+				position: absolute
+				left: 0
+				bottom: -9px
+				opacity: .4
+		ul, li
+			padding: 0
+			margin: 0
+			list-style-type: none
+		li
 			display: inline-block
+			max-width: 48%
+			opacity: .35
+			font-size: em(13px)
+			padding: 0 10px 0 22px
+			position: relative
+			&:only-child
+				max-width: 100%
+			.fa
+				font-size: 16px
+				position: absolute
+				left: 0
+				top: 3px
+
+.logo
+	img
+		max-width: 100%
+	position: relative
+	top: 3px
+
+.top-phone
+	font-size: em(20px)
+	font-family: "RobotoCondensedRegular", sans-serif
+	margin-top: -3px
+	span
+		font-size: em(12px)
+		opacity: .3
+
+.top-email
+	font-size: em(14px)
+	span
+		opacity: .3
+	a
+		color: #fff
+		text-decoration: underline
+
+.top-email,
+.top-phone
+	.fa
+		margin-right: 3px
+
+.button
+	color: #111
+	background-color: $accent-color
+	border-radius: 2px
+	font-size: em(16px)
+	padding: 6px 22px
+	position: relative
+
+	&::after
+		content: ''
+		position: absolute
+		background-color: darken($accent-color, 10%)
+		width: 100%
+		bottom: 0
+		height: 3px
+		left: 0
+		border-bottom-right-radius: 2px
+		border-bottom-left-radius: 2px
+
+	&:hover, &:focus
+		text-decoration: none
+		color: #222
+
+	&-small
+		font-size: em(14px)
+		&::after
+			height: 2px
+
+.top-button
+	margin-top: 22px
