--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,7 +4,14 @@
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px)
-	/**/
+	.top-email
+		font-size: 13px
+	.slider
+		.slide
+			h2
+				font-size: em(40px)
+			p
+				font-size: em(14em)
 
 
 /* Medium Devices, Desktops */
