--- a/sass/header.sass
+++ b/sass/header.sass
@@ -41,7 +41,7 @@ h1, h2, h3, h4, h5, h6, .button
 	text-align: center
 	border-bottom: lighten($main-color, 6%) 1px solid
 	position: relative
-	z-index: 1
+	z-index: 2
 	a 
 		color: #fff
 	ul, li 
@@ -62,6 +62,10 @@ h1, h2, h3, h4, h5, h6, .button
 		>li
 			// border-bottom: lighten($main-color, 5%) 1px solid
 			background-color: transparent
+			&.active
+				background-color: darken($main-color, 3%)
+				>a
+					color: $accent-color
 			>a
 				color: #FFF
 				border: none
@@ -128,8 +132,8 @@ h1, h2, h3, h4, h5, h6, .button
 		li
 			display: inline-block
 			max-width: 48%
-			opacity: .35
-			font-size: em(13px)
+			opacity: .4
+			font-size: em(12px)
 			padding: 0 10px 0 22px
 			position: relative
 			&:only-child
@@ -147,7 +151,7 @@ h1, h2, h3, h4, h5, h6, .button
 	top: 3px
 
 .top-phone
-	font-size: em(20px)
+	font-size: em(19px)
 	font-family: "RobotoCondensedRegular", sans-serif
 	margin-top: -3px
 	span
@@ -301,7 +305,8 @@ h1, h2, h3, h4, h5, h6, .button
 			padding-top: 80px
 
 .slide-img-wrap
-	max-width: 100%
+	img
+		max-width: 100%
 	margin-top: 12px
 	opacity: 0
 	transform: scale(.8)
