Responsive Menu start

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -16,7 +16,27 @@
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
-	/**/
+	.top-pannel
+		padding: 10px 0 20px 0
+
+	.logo
+		img
+			width: 100px
+			margin-top: 6px
+
+	.top-button
+		margin-top: 8px
+	.slider-wrap
+			.slider-nav
+				div
+					top: 115px
+
+	.slider
+		.slide
+			padding-top: 100px
+		.slide-content
+			padding-top: 30px
+
 
 
 /* Small Devices, Tablets */
@@ -46,9 +66,17 @@
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
-	/**/
-
-
+	.logo
+		img
+			width: 110px
+			max-width: 110px
+	.slider-wrap
+			.slider-nav
+				div
+					top: 115px
+	.slider
+		.slide-content
+			padding-top: 50px
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
