--- a/sass/header.sass
+++ b/sass/header.sass
@@ -229,6 +229,7 @@ h1, h2, h3, h4, h5, h6, .button
 	position: absolute
 	top: 0
 	width: 100%
+	overflow-x: hidden
 	.owl-dots
 		position: absolute
 		bottom: 50px
@@ -313,4 +314,48 @@ h1, h2, h3, h4, h5, h6, .button
 	transition: all 1s
 	transition-delay: .25s
 
+// mobile-menu
+.toggle-mnu
+	display: block
+	width: 28px
+	height: 28px
+	float: left
 
+	span:after, span:before
+		content: ""
+		position: absolute
+		left: 0
+		top: 9px
+
+	span:after
+		top: 18px
+
+	span
+		position: relative
+		display: block
+
+	span, span:after, span:before
+		width: 100%
+		height: 2px
+		background-color: $main-color
+		transition: all 0.3s
+		backface-visibility: hidden
+		border-radius: 2px
+
+	&.on span
+		background-color: transparent
+
+	&.on span:before
+		transform: rotate(45deg) translate(-1px, 0px)
+
+	&.on span:after
+		transform: rotate(-45deg) translate(6px, -7px)
+
+.mobile-mnu
+	color: $main-color
+	background-color: $accent-color
+	cursor: pointer
+	position: relative
+	z-index: 2
+	span
+		display: block
