--- a/sass/main.sass
+++ b/sass/main.sass
@@ -29,10 +29,11 @@ body input:required:valid,
 body textarea:required:valid
 	color: #666
 
-.mm-menu.mm-offcanvas
-	z-index: 4
-.mm-slideout
-	opacity: .2
+.mm-menu
+	&.mm-offcanvas
+		z-index: 4
+	.fa
+		display: none
 
 //ALWAYS END
 @import "media"
