--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -29,19 +29,21 @@
 	.slider-wrap
 			.slider-nav
 				div
-					top: 115px
+					top: 240px
 
 	.slider
 		.slide
 			padding-top: 130px
 		.slide-content
 			padding-top: 30px
-
+	.top-line
+		.sf-menu
+			display: none!important
 
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
-	
+
 	/*Disable Animation on Mobile Devices*/
 	.animated
 		/*CSS transitions*/
@@ -73,10 +75,11 @@
 	.slider-wrap
 			.slider-nav
 				div
-					top: 115px
+					top: 170px
 	.slider
 		.slide-content
-			padding-top: 50px
+			padding-top: 20px
+
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
