Site news and Services done

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -40,10 +40,22 @@
 		.sf-menu
 			display: none!important
 
+	.sect-universal
+		h2
+			float: left
+			margin-top: 0
+			margin-bottom: 20px
+			margin-right: 20px
+		.first-col
+			.button
+				float: left
+				margin-bottom: 30px
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
-
+	.sect-services
+		.col-md-3
+			padding: 0 15px
 	/*Disable Animation on Mobile Devices*/
 	.animated
 		/*CSS transitions*/
