Landing done, second in progress

--- a/sass/header.sass
+++ b/sass/header.sass
@@ -38,6 +38,43 @@ h1, h2, h3, h4, h5, h6, .button,
 .text-left
 	text-align: left
 
+.text-center
+	text-align: center
+
+.isnohome
+	.top-line .sf-menu > li > a
+		padding: 15px 28px
+	.top-pannel
+		padding: 25px 0
+	.slider
+		.slide
+			padding: 120px 0 40px
+			h2
+				font-size: em(36px)
+	.owl-dots,
+	.slider .slide-wrap p,
+	.slide-img-wrap
+		display: none
+	.slide-content
+		.col-md-6
+			width: 100%
+	.slider-wrap .slider-nav div
+		top: 220px
+
+.content
+	padding: 60px 0
+	article
+		img
+			max-width: 100%
+		h1
+			margin-top: 0
+
+.main-aside
+	.top-pannel-box
+		margin: 30px 0
+		h4
+			
+
 .top-line
 	background-color: $main-color
 	text-align: center
@@ -182,6 +219,7 @@ h1, h2, h3, h4, h5, h6, .button,
 	padding: 10px 35px
 	position: relative
 	transition: background-color .25s ease
+	border: none
 
 	&:hover
 		background-color: lighten($accent-color, 12%)
