--- a/sass/main.sass
+++ b/sass/main.sass
@@ -5,6 +5,8 @@
 @import "app/libs/superfish/dist/css/superfish"
 @import "app/libs/font-awesome/scss/font-awesome.scss"
 @import "app/libs/jQuery.mmenu/dist/css/jquery.mmenu.all"
+@import "app/libs/magnific-popup/dist/magnific-popup"
+@import "app/css/magnific-custom"
 
 *::-webkit-input-placeholder
 	color: #666
@@ -210,12 +212,16 @@ body textarea:required:valid
 	background-color: #0e0b13
 	padding: 70px 0
 	color: #fff
+	.top-button
+		margin-top: 15px
+		margin-bottom: 40px
 	.logo
 		opacity: .3
 	.footer-about
 		opacity: .4
 		font-size: em(13px)
 		margin-top: 28px
+		margin-bottom: 50px
 	.top-pannel-box
 		margin-bottom: 25px
 		.footer-menu
@@ -244,6 +250,55 @@ body textarea:required:valid
 				opacity: .4
 				transition: all .5s ease				
 
+.developer
+	margin-top: 80px
+	margin-bottom: 30px
+	a
+		display: inline-block
+		width: 120px
+		color: #fff
+		font-size: 14px
+		text-align: left
+		&:hover, &:focus
+			text-decoration: none
+		img, span
+			display: block
+
+.popup-form
+	position: relative
+	h3
+		text-align: center
+	label, input
+		display: block
+		width: 100%
+	label
+		margin-bottom: 12px
+		span
+			font-size: em(15px)
+			color: #999
+	input
+		border: $accent-color 4px solid
+		padding: 6px 17px
+	.button
+		margin-top: 20px
+		margin-bottom: 10px
+
+.success
+	position: absolute
+	top: 0
+	left: 0
+	width: 100%
+	height: 100%
+	text-align: center
+	background-color: #fff
+	z-index: 2
+	font-family: "RobotoCondensedBold", sans-serif
+	padding: 30px
+	text-transform: uppercase
+	align-items: center
+	display: none
+	&.visible
+		display: flex
 
 //ALWAYS END
 @import "media"
