--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -16,6 +16,9 @@
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
+	.developer
+		margin-top: 30px
+
 	.top-pannel
 		padding: 10px 0 20px 0
 
@@ -53,6 +56,10 @@
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
+	.main-foot
+		.text-right
+			text-align: left
+			
 	.sect-services
 		.col-md-3
 			padding: 0 15px
