--- a/sass/main.sass
+++ b/sass/main.sass
@@ -224,7 +224,7 @@ body textarea:required:valid
 		margin-bottom: 50px
 	.top-pannel-box
 		margin-bottom: 25px
-		.footer-menu
+		.menu-type-2
 			li
 				margin-bottom: 8px
 		li
